--- a/website-eclipse/package.json
+++ b/website-eclipse/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.7"
+    "nuxt": "^2.14.7",
+    "vue-number-animation": "^1.0.5"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
